# mcp-server

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 0001_create_users_table.sql  0002_create_oauth_authorization_codes.sql  0003_users_id_to_text.sql
src/: database.rs  main.rs  mcp.rs  registries.rs  tools.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  oauth.rs
src/tools/: ai.rs  db.rs  mod.rs  text.rs  utils.rs
