[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
shuttle-axum = "0.55.0"
shuttle-runtime = "0.55.0"
tokio = "1.28.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.18", features = ["json"] }
shuttle-shared-db = { version = "0.55.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.6"
jsonwebtoken = "9.0"
rig-core = "0.12.0"
once_cell = "1.19.0"
tracing = "0.1.40"
urlencoding = "2.1.3"
async-trait = "0.1"
